further analysis into the affect of energy intensity on CPI.

--- a/Energy_intensity_of_the_CPI.ipynb
+++ b/Energy_intensity_of_the_CPI.ipynb
@@ -5,12 +5,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# An analysis of the energy intensity of the Consumer Prices Index\n",
+    "\n",
+    "This analysis is an attempt to recreate a study that was carried out by the ONS:\n",
+    "\n",
+    "Office for National Statistics (ONS), released 17 April 2023, ONS website, article, [The energy intensity of the Consumer Prices Index: 2022](https://www.ons.gov.uk/economy/inflationandpriceindices/articles/theenergyintensityoftheconsumerpricesindex/2022)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# import libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +110,7 @@
        "4  CPA_B06 & B07          3.386310"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +222,7 @@
        "4  Fish and other fishing products; aquaculture p...              0.157  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +449,7 @@
        "[100 rows x 7 columns]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -514,232 +526,38 @@
        "      <td>2.154789</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>01.1.4</td>\n",
-       "      <td>1.932987</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>01.1.5</td>\n",
-       "      <td>2.596474</td>\n",
+       "      <th>95</th>\n",
+       "      <td>12.1.1</td>\n",
+       "      <td>0.655535</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>01.1.6</td>\n",
-       "      <td>3.394175</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>01.1.7</td>\n",
-       "      <td>2.610186</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>01.1.8</td>\n",
-       "      <td>1.925108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>01.1.9</td>\n",
-       "      <td>2.387179</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>01.2.1</td>\n",
-       "      <td>1.964081</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>01.2.2</td>\n",
-       "      <td>1.205051</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>02.1.1</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>02.1.2</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>02.1.3</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>02.2</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>02.3</td>\n",
-       "      <td>0.884737</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>03.1.1</td>\n",
-       "      <td>1.607779</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>03.1.2</td>\n",
-       "      <td>0.762420</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>03.1.3</td>\n",
-       "      <td>1.202648</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>03.1.4</td>\n",
-       "      <td>0.786266</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>03.2.1</td>\n",
-       "      <td>1.286125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>03.2.2</td>\n",
-       "      <td>1.739514</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>04.1.1</td>\n",
-       "      <td>0.683414</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>04.1.2</td>\n",
-       "      <td>0.676575</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>04.2.1</td>\n",
-       "      <td>0.546418</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>04.2.2</td>\n",
-       "      <td>0.593275</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>04.3.1</td>\n",
-       "      <td>2.703237</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>04.3.2</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>04.4.1</td>\n",
-       "      <td>4.330739</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>04.4.2</td>\n",
-       "      <td>0.821781</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>04.4.3</td>\n",
-       "      <td>1.205419</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>04.5.1</td>\n",
-       "      <td>56.730397</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>04.5.2</td>\n",
-       "      <td>58.178330</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>04.5.3</td>\n",
-       "      <td>76.775453</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>04.5.4</td>\n",
-       "      <td>2.408707</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>05.1.1</td>\n",
-       "      <td>1.301211</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>05.1.2</td>\n",
-       "      <td>1.607779</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>05.1.3</td>\n",
-       "      <td>1.739514</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>05.2</td>\n",
-       "      <td>1.607779</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>05.3.1</td>\n",
-       "      <td>0.788345</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>05.3.2</td>\n",
+       "      <th>96</th>\n",
+       "      <td>12.1.2</td>\n",
        "      <td>0.771707</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>05.3.3</td>\n",
-       "      <td>1.739514</td>\n",
+       "      <th>97</th>\n",
+       "      <td>12.1.3</td>\n",
+       "      <td>1.616737</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>05.4</td>\n",
-       "      <td>3.809785</td>\n",
+       "      <th>98</th>\n",
+       "      <td>12.2</td>\n",
+       "      <td>0.655535</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>05.5.1</td>\n",
-       "      <td>1.167847</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>05.5.2</td>\n",
-       "      <td>1.609412</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>05.6.1</td>\n",
-       "      <td>1.380091</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>05.6.2</td>\n",
-       "      <td>0.202954</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>06.1.1</td>\n",
-       "      <td>0.892466</td>\n",
+       "      <th>99</th>\n",
+       "      <td>12.3.1</td>\n",
+       "      <td>1.320813</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>100 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -749,54 +567,17 @@
        "2       01.1.1          2.337718\n",
        "3       01.1.2          1.832863\n",
        "4       01.1.3          2.154789\n",
-       "5       01.1.4          1.932987\n",
-       "6       01.1.5          2.596474\n",
-       "7       01.1.6          3.394175\n",
-       "8       01.1.7          2.610186\n",
-       "9       01.1.8          1.925108\n",
-       "10      01.1.9          2.387179\n",
-       "11      01.2.1          1.964081\n",
-       "12      01.2.2          1.205051\n",
-       "13      02.1.1          0.000000\n",
-       "14      02.1.2          0.000000\n",
-       "15      02.1.3          0.000000\n",
-       "16        02.2          0.000000\n",
-       "17        02.3          0.884737\n",
-       "18      03.1.1          1.607779\n",
-       "19      03.1.2          0.762420\n",
-       "20      03.1.3          1.202648\n",
-       "21      03.1.4          0.786266\n",
-       "22      03.2.1          1.286125\n",
-       "23      03.2.2          1.739514\n",
-       "24      04.1.1          0.683414\n",
-       "25      04.1.2          0.676575\n",
-       "26      04.2.1          0.546418\n",
-       "27      04.2.2          0.593275\n",
-       "28      04.3.1          2.703237\n",
-       "29      04.3.2          0.000000\n",
-       "30      04.4.1          4.330739\n",
-       "31      04.4.2          0.821781\n",
-       "32      04.4.3          1.205419\n",
-       "33      04.5.1         56.730397\n",
-       "34      04.5.2         58.178330\n",
-       "35      04.5.3         76.775453\n",
-       "36      04.5.4          2.408707\n",
-       "37      05.1.1          1.301211\n",
-       "38      05.1.2          1.607779\n",
-       "39      05.1.3          1.739514\n",
-       "40        05.2          1.607779\n",
-       "41      05.3.1          0.788345\n",
-       "42      05.3.2          0.771707\n",
-       "43      05.3.3          1.739514\n",
-       "44        05.4          3.809785\n",
-       "45      05.5.1          1.167847\n",
-       "46      05.5.2          1.609412\n",
-       "47      05.6.1          1.380091\n",
-       "48      05.6.2          0.202954\n",
-       "49      06.1.1          0.892466"
+       "..         ...               ...\n",
+       "95      12.1.1          0.655535\n",
+       "96      12.1.2          0.771707\n",
+       "97      12.1.3          1.616737\n",
+       "98        12.2          0.655535\n",
+       "99      12.3.1          1.320813\n",
+       "\n",
+       "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,12 +597,12 @@
     "# turn index into a column so we can access the data\n",
     "coicop_energy_intensity = coicop_energy_intensity.reset_index()\n",
     "\n",
-    "coicop_energy_intensity.head(50)"
+    "coicop_energy_intensity.head(100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +628,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/t7/n_c5tq1n0h985pbhlhf2w0c80000gn/T/ipykernel_26027/1377313516.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/var/folders/t7/n_c5tq1n0h985pbhlhf2w0c80000gn/T/ipykernel_30121/1377313516.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  coicop_category_intensity = coicop_energy_intensity.groupby(coicop_energy_intensity['COICOP Code'].str[:2]).mean()\n"
      ]
     }
@@ -863,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +803,7 @@
        "11          0.574229  "
       ]
      },
-     "execution_count": 122,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1039,11 +820,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Further Analysis\n",
+    "\n",
+    "In the ONS study the team also took the energy used in distribution into account when calculating the energy intensity of the CPA categories. They used the Distributors' Trading Margins (DTMs) found in the supply and use tables to estimate these. I am not currently sure how this was achieved but I have emailed the team to clarify their method. Currently my values for the energy intensity for the various COICOP categories are similar to the ONS values, but there is a bit of variation."
+   ]
   }
  ],
  "metadata": {
