--- a/Energy_price_differences_due_to_consumption.ipynb
+++ b/Energy_price_differences_due_to_consumption.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Energy intesity of the CPI"
+    "# The affect of energy price differences due to consumption"
    ]
   },
   {
@@ -25,7 +25,6 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import pickle\n",
     "import seaborn as sns "
    ]
   },
@@ -494,7 +493,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Electricity prices"
+    "## Electricity prices\n",
+    "\n",
+    "First plot the energy prices for different consumption bands"
    ]
   },
   {
