minor tidying up

--- a/Energy_intensity_of_the_CPI_continued.ipynb
+++ b/Energy_intensity_of_the_CPI_continued.ipynb
@@ -1380,6 +1380,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We are getting failry large floating point rounding errors when summing the contributions to CPI inflation. I haven't used the most accurate figures for the contributions of each CPI category. I don't know how the ONS team overcame this (maybe they have access to data with more precision?).\n",
+    "\n",
+    "The overall shape of my data is consistent though so broader trends can be found."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## plot data"
    ]
   },
