edited ONS analysis using insights from the team.

--- a/Energy_price_differences_due_to_consumption.ipynb
+++ b/Energy_price_differences_due_to_consumption.ipynb
@@ -1017,7 +1017,7 @@
     }
    ],
    "source": [
-    "# plot the time recent time period or large energy price inflation (post start of the ukrane war)\n",
+    "# plot the time recent time period for large energy price inflation (post start of the ukrane war)\n",
     "\n",
     "percent_difference.plot(x='period', figsize=(20, 5))\n",
     "\n",
